@@ -35,6 +35,8 @@ Bug fixes
 Improvements
 ------------
 
+* [`2238 <https://cta-redmine.irap.omp.eu/issues/2238>`_] -
+  ``GCTAObservation`` and ``GCTAOnOffObservation`` handle ``statistic`` attribute in XML file
 * [`2231 <https://cta-redmine.irap.omp.eu/issues/2231>`_] -
   Add ``GCTAOnOffObservation`` PHA, ARF and RMF constructor
 * [`2228 <https://cta-redmine.irap.omp.eu/issues/2228>`_] -
