@@ -226,6 +226,9 @@ also position fitting is now possible for Fermi-LAT (#604, #2183).
 
 20. CTA interface
 -----------------
+GCTAObservation and GCTAOnOffObservation handle statistic attribute in XML
+file (#2238).
+
 Added GCTAOnOffObservation(GPha&, GPha&, GArf&, GRmf&) constructor to allow
 creation of an On/Off observation from On and Off spectra, an Auxiliary Response
 File and a Redistribution Matrix File (#2231).
